# mailauncher

./: .env  .env.development  .env.production  .gitignore  BUILD.md  CHANGELOG.md  CSS_CLEANUP_REPORT.md  EULA.md  LICENSE  MIGRATION_SUMMARY.md  MaiLauncher用户使用文档.md  PROJECT_CLEANUP_REPORT.md  README.md  SELF_HOSTED_RUNNER_GUIDE.md  SETUP.md  THEME_IMPLEMENTATION.md  TOAST_PROGRESS_FIX_REPORT.md  analyze-unused-components.js  bot_config_template.toml  build.ps1  build.sh  check-env.ps1  dev.sh  fix-app-macos.sh  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.cjs  tailwind.config.js  test-connection.js  test-notifications.md  test-optimization.js  test-optimized-deployment.js  test_no_cache.js  tsconfig.json  vite.config.d.ts  vite.config.js  (+3 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  state.rs
frontend/src-tauri/src/commands/: config.rs  download.rs  instance.rs  mod.rs  process.rs  schedule.rs  stats.rs  system.rs  version.rs
frontend/src-tauri/src/db/: connection.rs  migration.rs  mod.rs
frontend/src-tauri/src/errors/: app_error.rs  mod.rs
frontend/src-tauri/src/models/: api_provider.rs  config.rs  deployment.rs  download.rs  instance.rs  log.rs  message_queue.rs  mod.rs  response.rs  schedule.rs  version.rs
frontend/src-tauri/src/services/: api_provider_service.rs  config_service.rs  download_service.rs  install_service.rs  instance_service.rs  message_queue_service.rs  mod.rs  process_service.rs  schedule_service.rs  (+3 more)
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: install.rs  main.rs
src/: App.vue  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Resources/en.lproj/: InfoPlist.strings
src-tauri/Resources/zh_CN.lproj/: InfoPlist.strings
src-tauri/capabilities/: default.json
src-tauri/icons/: maimai.icns
src-tauri/src/: lib.rs  state.rs  webui.rs
src-tauri/src/commands/: download.rs  instance.rs  logs.rs  mod.rs  process.rs  runtime.rs  system.rs  version.rs
src-tauri/src/components/: mod.rs  registry.rs  spec.rs
src-tauri/src/db/: migration.rs
src-tauri/src/lifecycle/: mod.rs  projector.rs
src-tauri/src/models/: config.rs  instance.rs  mod.rs  stats.rs  update.rs
src-tauri/src/runtime/: adapter.rs  docker.rs  local.rs  mod.rs  path_mapper.rs  resolver.rs  wsl.rs
src-tauri/src/services/: api_provider_service.rs  config_service.rs  download_service.rs  install_service.rs  instance_service.rs  lifecycle_service.rs  log_service.rs  mod.rs  process_service.rs  runtime_service.rs  system_service.rs  terminal_stream_service.rs  version_service.rs
src-tauri/src/utils/: mod.rs  platform.rs
(+610 files in other folders)
